Quote aufgabe fertig

--- a/quotes.html
+++ b/quotes.html
@@ -13,9 +13,9 @@
 		<cite>We live in a society exquisitely dependent on science and technology, in which hardly 
 			anyone knows anything about science and technology.</cite> <p>Carl Sagan</p>
 			
-		<cite>Life is like riding a bicycle. To keep your balance you must keep moving.</cite> <p>Albert Einstein</p>
+		<cite style="font-family: sans-serif">Livet er ligesom at køre på cykel. For at holde din saldo, skal du holde flytte.</cite> <p>Albert Einstein</p>
 		
-		<cite>Rules of Acquisition 285 - No good deed ever goes unpunished.</cite> <p>Quark</p>
+		<cite style="font-family: Arial, Helvetica, sans-serif">قواعد اقتناء 285 - لا يمر عمل جيد من أي وقت مضى دون عقاب.</cite> <p>Quark</p>
 		
 	</body>
 </html>
