final version of site

--- a/quotes.html
+++ b/quotes.html
@@ -15,7 +15,7 @@
 			
 		<cite style="font-family: sans-serif">Livet er ligesom at køre på cykel. For at holde din saldo, skal du holde flytte. - Albert Einstein</cite>
 		
-		<cite style="font-family: Arial, Helvetica, sans-serif">قواعد اقتناء 285 - لا يمر عمل جيد من أي وقت مضى دون عقاب. - Quark</cite>
+		<cite style="font-family: Arial, Helvetica">قواعد اقتناء 285 - لا يمر عمل جيد من أي وقت مضى دون عقاب. - Quark</cite>
 		
 	</body>
 </html>
