--- a/quotes.html
+++ b/quotes.html
@@ -11,11 +11,11 @@
 		<!-- ToDo in verschiedenen Sprachen und Schriftarten!-->
 		
 		<cite>We live in a society exquisitely dependent on science and technology, in which hardly 
-			anyone knows anything about science and technology. - Carl Sagan</cite>
+			anyone knows anything about science and technology. - Carl Sagan -</cite>
 			
-		<cite style="font-family: sans-serif">Livet er ligesom at køre på cykel. For at holde din saldo, skal du holde flytte. - Albert Einstein</cite>
+		<cite style="font-family: sans-serif">Livet er ligesom at køre på cykel. For at holde din saldo, skal du holde flytte. - Albert Einstein -</cite>
 		
-		<cite style="font-family: Arial, Helvetica">قواعد اقتناء 285 - لا يمر عمل جيد من أي وقت مضى دون عقاب. - Quark</cite>
+		<cite style="font-family: Arial, Helvetica">قواعد اقتناء 285 - لا يمر عمل جيد من أي وقت مضى دون عقاب. - Quark -</cite>
 		
 	</body>
 </html>
