--- a/Aufgabe 1/index.html
+++ b/Aufgabe 1/index.html
@@ -13,14 +13,11 @@
 		</ul>
 		
 		<nav>
-			<a href="http://multimediatechnology.at/~fhs35974/">Kommt noch!</a>
+			<a href="http://multimediatechnology.at/~fhs35974/">Sarah Gaggl</a>
 			<a href="http://multimediatechnology.at/~fhs36118/"><strong>Daniel Raudschus</strong></a>
 			<a href="http://multimediatechnology.at/~fhs36098/">David Kranewitter</a>
 
 		</nav>
-		
-<!-- fhs35974 Nachbarin links-->
-<!-- fhs36098 Nachbar rechts-->
-		
+				
 	</body>
 </html>
