--- a/Aufgabe 2/a) favorite place/ort.html
+++ b/Aufgabe 2/a) favorite place/ort.html
@@ -4,18 +4,16 @@
 <meta charset=utf-8>
 <title>MMT Webdesign | Übung 1 a| Ort</title>
 
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" type="text/css" href="style.css" />
 	
 </head>
 
 <body>
-	
-	<div class="white">
+
 		
 		<h1>Welcome to Island!</h1>
 		
-		<img src="satellite.jpg" alt"Island viewed from a NASA satellite" />
-		
+		<img src="satellite.jpg" alt"Island viewed from a nasa satellite" width="900px" height="550px">
 		
 		<p>
 			Iceland Listeni/ˈaɪslənd/ is a Nordic island country marking the juncture between the North Atlantic and Arctic Oceans, 
@@ -38,25 +36,20 @@
 			most-developed country in the world by the United Nations' Human Development Index.
 		</p>
 		
-		<h1></h1>
+		<h1>Reykjavík</h1>
+		
+		<img src="capital2.jpeg" alt="capital of island" width="900px" height="550px">
 		
 		<p>Reykjavík (Icelandic pronunciation: [ˈreiːcaˌviːk] is the capital and largest city of Iceland.
 			Its latitude, at 64°08' N, makes it the world's northernmost capital of a sovereign state.
 			It is located in southwestern Iceland, on the southern shore of the Faxaflói Bay. With a population of around 120,000 
 			(and over 200,000 in the Greater Reykjavík Area), it is the heart of Iceland's cultural, economic and governmental activity.
 		</p>
-
 		<p>
 			Reykjavík is believed to be the location of the first permanent settlement in Iceland, which Ingólfur Arnarson is said to 
 			have established around AD 870. Until the 18th century, there was no urban development in the city location. 
 			The city was founded in 1786 as an official trading town and grew steadily over the next decades, as it transformed into a regional 
 			and later national centre of commerce, population, and governmental activities. It is among the cleanest, greenest, and safest cities
 			 in the world.
-		</p>
-		
-		
-		
-	</div>
-	
-	
+		</p>		
 </body>
