verzeichnisstruktur verändert und orte.html fertig

--- a/Aufgabe 1/index.html
+++ b/Aufgabe 1/index.html
@@ -10,6 +10,7 @@
 			<li><a href="text.html">Text und HTML</a></li>
 			<li><a href="more.html">Noch mehr HTML</a></li>
 			<li><a href="quotes.html">Zitate!</a></li>
+			<li><a href="ort.html">Lieblingsort</a></li>
 		</ul>
 		
 		<nav>
