--- a/Aufgabe 2/solar system/index.html
+++ b/Aufgabe 2/solar system/index.html
@@ -4,7 +4,7 @@
 <meta charset=utf-8>
 <title>MMT Webdesign | Übung 1 | Solar System</title>
 
-<link rel="stylesheet" href="style/style.css" />
+<link rel="stylesheet" href="c/style.css" />
 
 <!--[if IE]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -30,8 +30,8 @@ Farben und Hintergrundbilder
 <article>
 
 <figure>
-<img src="pic/Endeavour-Space-Shuttle-Blastoff.jpg" alt="Endeavour-Space-Shuttle-Blastoff" width="960" height="451" />
-<figcaption>><a href="http://www.flickr.com/photos/44124348109@N01/1055810551">Endeavour-Space-Shuttle-Blastoff</a> von <a href="http://www.flickr.com/people/jurvetson/">jurvetson</a></figcaption>
+<img src="p/Endeavour-Space-Shuttle-Blastoff.jpg" alt="Endeavour-Space-Shuttle-Blastoff" width="960" height="451" />
+<figcaption><a href="http://www.flickr.com/photos/44124348109@N01/1055810551">Endeavour-Space-Shuttle-Blastoff</a> von <a href="http://www.flickr.com/people/jurvetson/">jurvetson</a></figcaption>
 </figure>
 
 <hgroup>
@@ -128,7 +128,7 @@ Farben und Hintergrundbilder
 <article>
 
 <figure class="earth">
-<img src="pic" alt="GPN-2001-000009" width="336" height="271" />
+<img src="p/GPN-2001-000009.jpg" alt="GPN-2001-000009" width="336" height="271" />
 <figcaption><a href="http://www.nasaimages.org/luna/servlet/detail/nasaNAS~20~20~120356~227055:Earthrise---Apollo-8">Earthrise - Apollo 8</a> by <a href="http://www.nasaimages.org/">NASA</a></figcaption>
 </figure>
 
@@ -141,7 +141,7 @@ Farben und Hintergrundbilder
 </blockquote>
 
 <figure>
-<img src="pic/1000px-Oort_cloud_Sedna_orbit.jpg" alt="1000px-Oort_cloud_Sedna_orbit" width="940" height="462" />
+<img src="p/1000px-Oort_cloud_Sedna_orbit.jpg" alt="1000px-Oort_cloud_Sedna_orbit" width="940" height="462" />
 <figcaption><a href="http://en.wikipedia.org/wiki/File:Oort_cloud_Sedna_orbit.svg">Oort cloud Sedna</a>, created by <a href="http://commons.wikimedia.org/wiki/NASA">NASA</a></figcaption>
 </figure>
 
