--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<li><a href="more.html">Noch mehr HTML</a></li>
 			<li><a href="quotes.html">Zitate!</a></li>
 			<li><a href="ort.html">Lieblingsort</a></li>
+			<li><a href ="solar/index.html">NASA</a></li>
 		</ul>
 		
 		<nav>
