TODO polishing site

--- a/index.html
+++ b/index.html
@@ -3,23 +3,37 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Übungsaufgabe 1 - Webprogrammierung</title>
+		<link rel="stylesheet" href="style.css" />
+
 	</head>
 
 	<body>
+		
+		
+		<div class="navlink">
 		<ul>
 			<li><a href="text.html">Text und HTML</a></li>
 			<li><a href="more.html">Noch mehr HTML</a></li>
 			<li><a href="quotes.html">Zitate!</a></li>
 			<li><a href="ort.html">Lieblingsort</a></li>
-			<li><a href ="solar/index.html">NASA</a></li>
+			<li><a href ="solar/index.html">Space Shuttle</a></li>
+			<li><a href ="herbstfest/index.html">Herbstfest - Responsive Design</a></li>
 		</ul>
+		</div>
 		
 		<nav>
 			<a href="http://multimediatechnology.at/~fhs35974/">Sarah Gaggl</a>
 			<a href="http://multimediatechnology.at/~fhs36118/"><strong>Daniel Raudschus</strong></a>
 			<a href="http://multimediatechnology.at/~fhs36098/">David Kranewitter</a>
-
 		</nav>
+		
+		
+		<div class="main">
+			
+			<h1>MultiMediaTechnologie</h1>
+			<h2>Daniel Raudschus</h2>
+		
+		</div>
 				
 	</body>
 </html>
