--- a/more.html
+++ b/more.html
@@ -2,16 +2,20 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Übungsaufgabe 1 - Webprogrammierung</title>
+		<title>Webprogrammieren</title>
+		<link rel="stylesheet" href="style.css" />
+		
 	</head>
 	<body>
-		<h1>Übungsaufgabe 1 - Daniel Raudschus</h1>
+		<h1>Aufgabe 1b</h1>
 		
+		<div id="soyuslink"></div>
 			<ul>
-				<li><a href="http://www.khanacademy.com">Khanacademy - online Mathe lernen</a></li>
+				<li><a href="http://www.khanacademy.com">Khanacademy - online Mathe</a></li>
 				<li><a href="http://www.codeacademy.com">Codeacademy - learn to code!</a></li>
 				<li><a href="http://www.w3schools.com">HTML5 Kurs des W3C</a></li>
 			</ul>
+		</div>
 			
 			<img src="soyuz.jpg" alt="soyuz space capsel approaches the iss">
 		
