--- a/ort.html
+++ b/ort.html
@@ -2,7 +2,7 @@
 <html lang=de>
 <head>
 <meta charset=utf-8>
-<title>MMT Webdesign | Übung 1 a| Ort</title>
+<title>Webprogrammieren</title>
 
 <link rel="stylesheet" type="text/css" href="style.css" />
 	
@@ -11,7 +11,7 @@
 <body>
 
 		
-		<h1>Welcome to Island!</h1>
+		<h1>Aufgabe 2 - Welcome to Island!</h1>
 		
 		<table>
 			<tr>
