--- a/quotes.html
+++ b/quotes.html
@@ -2,11 +2,13 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Übungsaufgabe 1 - Webprogrammierung</title>
+		<title>Webprogrammierung</title>
+		<link rel="stylesheet" href="style.css" />
+	
 	</head>
 
 	<body>
-		<h1>Übungsaufgabe 1 - Daniel Raudschus</h1>
+		<h1>Aufgabe 1a</h1>
 		
 		<!-- ToDo in verschiedenen Sprachen und Schriftarten!-->
 		
