--- a/text.html
+++ b/text.html
@@ -2,11 +2,13 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Übungsaufgabe 1 - Webprogrammierung</title>
+		<title>Webprogrammierung</title>
+		<link rel="stylesheet" href="style.css" />
+
 	</head>
 
 	<body>
-		<h1>Übungsaufgabe 1 - Daniel Raudschus</h1>
+		<h1>Übungsaufgabe 1c</h1>
 		<p> Weit draußen in den unerforschten Einöden eines total aus der Mode gekommenen Ausläufers des westlichen Spiralarms 
  			der <strong>Galaxis</strong> leuchtet unbeachtet eine kleine <em>gelbe Sonne</em>. Um sie herum kreist ein absolut unbedeutender, <em>kleiner</em> <strong>blaugrüner</strong> 
  			<em>Planet</em>, dessen vom Affen stammende Bioformen so erstaunlich primitiv sind, dass sie Digitaluhren noch immer für eine 
