--- a/mini-todo/index.html
+++ b/mini-todo/index.html
@@ -12,7 +12,7 @@
 <body>
 	<section id="todoapp">
 		<header id="header">
-			<h1>MiniToDo</h1>
+			<h1>Daniel´s ToDo</h1>
 			<input id="new-todo" placeholder="What needs to be done?" autofocus>
 		</header>
 		<section id="main">
@@ -21,7 +21,7 @@
 	</section>
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
-		<p>Adapted from <a href="http://todomvc.com/vanilla-examples/vanillajs/">TodoMVC</a> by Brigitte Jellinek and <i>your name here</i></p>
+		<p>Adapted from <a href="http://todomvc.com/vanilla-examples/vanillajs/">TodoMVC</a> by Brigitte Jellinek and <i>Daniel Raudschus</i></p>
 	</footer>
 	<script src="app.js"></script>
 </body>
