--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 			<li><a href ="solar/index.html">Space Shuttle</a></li>
 			<li><a href ="herbstfest/index.html">Herbstfest (responsive)</a></li>
 			<li><a href ="formular/index.html">Pizza order</a></li>
+			<li><a href ="farbfeld.html">United colors of Raudschus</a></li>
+			<li><a href ="mini-todo/index.html">To Do List</a></li>
 
 		</ul>
 		</div>
