--- a/formular/index.html
+++ b/formular/index.html
@@ -17,28 +17,29 @@
         <fieldset class="order">
             <legend>Deine Bestellung</legend>
             <p><label>
-            <input type="text" value="0" size="3" name="pizza_magerita" id="pizza_magerita">
+            <input type="text" value="1" size="3" name="pizza_magerita" id="pizza_magerita">
             Magerita</label></p>
             <p><label>
-            <input type="text" value="0" size="3" name="pizza_diavolo" id="pizza_diavolo">
+            <input type="text" value="1" size="3" name="pizza_diavolo" id="pizza_diavolo">
             Diavolo</label></p> 
             <p><label>
-            <input type="text" value="0" size="3" name="pizza_palermo" id="pizza_palermo">
+            <input type="text" value="1" size="3" name="pizza_palermo" id="pizza_palermo">
             Palermo</label></p>
             <p class="comment">Mindestbestellmenge: 3 Pizzas</p>
         </fieldset>
+
      
         <fieldset class="address">
-            <legend>Deine Lieferadresse</legend>
+            <legend>Wir Liefern an Dich. Sag uns einfach wohin!</legend>
             <p><label for="first-name">Name *</label>
-            <input type="text" value="" name="first_name" id ="first-name" required pattern="[a-zA-Z]+"></p>
+            <input type="text" value="" placeholder="Vorname" name="first_name" id ="first-name" required pattern="[a-zA-Z]+"></p>
             <p><label for="last_name">Adresse *</label>
-            <input type="text" value="" name="last_name" id="last_name" required pattern="[a-zA-Z]+"></p>
+            <input type="text" value="" placeholder="Nachname" name="last_name" id="last_name" required pattern="[a-zA-Z]+"></p>
             <p><label for="phone">Telefon *</label>
-            <input type="text" value="" name="phone" id="phone" required pattern="[0-9]+"></p>
+            <input type="text" value="" name="phone" placeholder="0049123456" id="phone" required pattern="[0-9]+"></p>
         </fieldset>    
         
-        <input type="submit">
+        <input type="submit" value="Bestellen">
     </form>
  
     <p><a href="4b/index.html">Hier</a> gehts zu Aufgabe b</p>
