canvas 2d fertig, jquery site angelegt aber noch kein jquery eingefügt

--- a/quotes.html
+++ b/quotes.html
@@ -10,8 +10,7 @@
 	<body>
 		<h1>Aufgabe 1a</h1>
 		
-		<!-- ToDo in verschiedenen Sprachen und Schriftarten!-->
-		
+		<div class="main">
 		<blockquote>We live in a society exquisitely dependent on science and technology, in which hardly 
 			anyone knows anything about science and technology. - Carl Sagan -</blockquote>
 		
@@ -20,7 +19,7 @@
 		<blockquote style="font-family: Arial, Helvetica">قواعد اقتناء 285 - لا يمر عمل جيد من أي وقت مضى دون عقاب. - Quark -</blockquote>
 		
 		<br>
-		
+</div>		
 		<a href="index.html">zurück</a>
 		
 	</body>
