--- a/text.html
+++ b/text.html
@@ -9,13 +9,15 @@
 
 	<body>
 		<h1>Übungsaufgabe 1c</h1>
+		
+		<div class="main">
 		<p> Weit draußen in den unerforschten Einöden eines total aus der Mode gekommenen Ausläufers des westlichen Spiralarms 
  			der <strong>Galaxis</strong> leuchtet unbeachtet eine kleine <em>gelbe Sonne</em>. Um sie herum kreist ein absolut unbedeutender, <em>kleiner</em> <strong>blaugrüner</strong> 
  			<em>Planet</em>, dessen vom Affen stammende Bioformen so erstaunlich primitiv sind, dass sie Digitaluhren noch immer für eine 
  			<em>unwahrscheinlich</em> <strong><em>tolle</em> Erfindung</strong> halten...</p>
  			
  			<br>
- 			
+ 		</div>	
 			<a href="index.html">zurück</a>
 	</body>
 </html>
