--- a/show.html
+++ b/show.html
@@ -51,7 +51,8 @@ $(document).ready(function(){
 		<p id="three" style="display: none">For the epicness</p>
 		
 		<h2 id="headfour">Terminator 2 Judgment Day</h2>
-		
+		<p id="four" style="display: none">Nearly 20 Years old and still good effects. I´ll be back!</p>
+
 		<h2 id="headfive">Breaking Bad</h2>
 		<p id="five" style="display: none">Actually not a Movie but a very good series.</p>
 	</div>			
