letzte webaufgabe fertig

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 			<li><a href ="formular/index.html">Pizza order</a></li>
 			<li><a href ="farbfeld.html">United colors of Raudschus</a></li>
 			<li><a href ="mini-todo/index.html">To Do List</a></li>
+						<li><a href ="canvas.html">Canvas Übung</a></li>
+			<li><a href ="show.html">Show me</a></li>
+			<li><a href ="project.html">Projektbeschreibung</a></li>
+
 
 		</ul>
 		</div>
